--- a/ports/stm32/Makefile
+++ b/ports/stm32/Makefile
@@ -318,6 +318,7 @@ SRC_C += \
 	gccollect.c \
 	help.c \
 	machine_adc.c \
+	machine_bitstream.c \
 	machine_i2c.c \
 	machine_i2s.c \
 	machine_spi.c \
