--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -369,6 +369,7 @@ jobs:
         - "sparkfun_samd21_mini"
         - "sparkfun_samd51_micromod"
         - "sparkfun_samd51_thing_plus"
+        - "sparkfun_stm32f405_micromod"
         - "sparkfun_thing_plus_rp2040"
         - "spresense"
         - "stackrduino_m0_pro"
