--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -504,9 +504,9 @@ jobs:
         - "adafruit_funhouse"
         - "adafruit_magtag_2.9_grayscale"
         - "adafruit_metro_esp32s2"
+        - "ai_thinker_esp_12k_nodemcu"
         - "artisense_rd00"
         - "atmegazero_esp32s2"
-        - "ai_thinker_esp_12k"
         - "crumpspace_crumps2"
         - "electroniccats_bastwifi"
         - "espressif_kaluga_1"
