mimxrt: Add the bitstream class to machine.
Following the code example for ESP32 of Jim Mussard. As a side effect,

- mp_hal_ticks_cpu() was implemented,
- mp_hal_get_cpu_freq() and mp_hal_ticks_cpu_init() were added and used.
- mp_hal_pin_high() and mp_hal_pin_low() were changed for symmetry

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -150,6 +150,7 @@ SRC_C += \
 	machine_spi.c \
 	machine_timer.c \
 	machine_uart.c \
+	machine_bitstream.c \
 	mimxrt_flash.c \
 	modutime.c \
 	modmachine.c \
